--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <li><a href="#">Help</a></li>
                         </ul>
                         <div class="navigation_login">
-                            <a href="#">Login</a>
+                            <a href="login.html">Login</a>
                             <button class='getStarted'>Get Started</button>
                         </div>
                     </div>
