--- a/login.html
+++ b/login.html
@@ -113,8 +113,15 @@
                 </table>
             </div>
 
-            <section class="map">
-
+            <section class="map-container hide">
+                <div class="map">
+                    <a href="https://yandex.kz/maps/org/zh_k_afd_plaza/176271122649/?utm_medium=mapframe&utm_source=maps"
+                        style="color:#eee;font-size:12px;position:absolute;top:0px;">Ж/к Afd Plaza</a><a
+                        href="https://yandex.kz/maps/162/almaty/category/housing_complex/64960171169/?utm_medium=mapframe&utm_source=maps"
+                        style="color:#eee;font-size:12px;position:absolute;top:14px;">Жилой комплекс в Алматы</a><iframe
+                        src="https://yandex.kz/map-widget/v1/-/CCUyiUGJXA" width="560" height="400" frameborder="1"
+                        allowfullscreen="true" style="position:relative;"></iframe>
+                </div>
             </section>
 
             <section class="animated-snl">
