--- a/login.html
+++ b/login.html
@@ -141,10 +141,13 @@
                 </div>
                 <img id="centerImg" src="./media/img/snl_bonus/anime09.svg" alt="animated-snl images">
             </section>
+            
+
         </div>
 
 
     </div>
+    <div class="ball hide"></div>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
 
